--- a/module_assets/css/style.css
+++ b/module_assets/css/style.css
@@ -1,3 +1,48 @@
 .banjax_module_content {
 	
+
+
+
+
+}
+
+.note_bar_left, .note_bar_right, .main_text_area {
+	
+	
+	
+}
+
+.inner {
+	margin: 2px;
+	padding: 2px;
+	height: 300px;
+	background-color: #999;
+}
+
+.draggable {
+	background-color: #900;
+	min-height: 50px;
+	margin: 5px;
+	padding: 5px;
+	list-style: none;
+}
+
+.editable {
+	background-color: white;
+}
+
+span.foreign {
+	background-color: red;
+}
+
+span.foreign:hover:after {
+	content: 'foreign';
+	background-color: white;
+	display: block;
+	position: absolute;
+	right:-40px;
+}
+
+lb {
+	display: block;
 }
